test/parsing/errors/nameLength/longPath.chpl
use shortName;

proc main() {
  writeln("In longPath.chpl");
}
